Fix bugs and add descriptions in the swagger documentation.
