# swagger/swagger-output.json
@@ -17,19 +17,9 @@
     "https"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/base/getUser": {
       "get": {
-        "description": "",
+        "description": "Get the list of all users",
         "responses": {
           "200": {
             "description": "OK"
@@ -39,7 +29,7 @@
     },
     "/base/getUserById": {
       "get": {
-        "description": "",
+        "description": "Get user by user ID",
         "parameters": [
           {
             "name": "userId",
@@ -59,7 +49,7 @@
     },
     "/base/getItemsByUserId": {
       "get": {
-        "description": "",
+        "description": "Get list of items by the user ID",
         "parameters": [
           {
             "name": "userId",
@@ -79,7 +69,7 @@
     },
     "/base/getItemByUserIdAndItemName": {
       "get": {
-        "description": "",
+        "description": "Get specific item by the user ID and its name",
         "parameters": [
           {
             "name": "userId",
@@ -104,7 +94,7 @@
     },
     "/base/createUser": {
       "post": {
-        "description": "",
+        "description": "Create a new user",
         "parameters": [
           {
             "name": "body",
@@ -113,13 +103,13 @@
               "type": "object",
               "properties": {
                 "first_name": {
-                  "example": "any"
+                  "example": "John"
                 },
                 "last_name": {
-                  "example": "any"
+                  "example": "Doe"
                 },
                 "email": {
-                  "example": "any"
+                  "example": "any@test.com"
                 }
               }
             }
@@ -140,7 +130,7 @@
     },
     "/base/createItem": {
       "post": {
-        "description": "",
+        "description": "Create a new Item",
         "parameters": [
           {
             "name": "body",
@@ -155,7 +145,7 @@
                   "example": "any"
                 },
                 "amount": {
-                  "example": "any"
+                  "example": "1"
                 },
                 "color": {
                   "example": "any"
@@ -167,10 +157,10 @@
                   "example": "any"
                 },
                 "purchase_date": {
-                  "example": "any"
+                  "example": "2022-12-12"
                 },
                 "is_paid": {
-                  "example": "any"
+                  "example": "false"
                 }
               }
             }
@@ -189,14 +179,13 @@
         }
       }
     },
-    "/base/updateUser/{userId}": {
+    "/base/updateUser": {
       "put": {
-        "description": "",
+        "description": "Update an user",
         "parameters": [
           {
             "name": "userId",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           },
           {
@@ -206,13 +195,13 @@
               "type": "object",
               "properties": {
                 "first_name": {
-                  "example": "any"
+                  "example": "John"
                 },
                 "last_name": {
-                  "example": "any"
+                  "example": "Doe"
                 },
                 "email": {
-                  "example": "any"
+                  "example": "any@test.com"
                 }
               }
             }
@@ -231,14 +220,18 @@
         }
       }
     },
-    "/base/updateItem/{userId&itemName}": {
+    "/base/updateItem": {
       "put": {
-        "description": "",
+        "description": "Update an item",
         "parameters": [
           {
-            "name": "userId&itemName",
-            "in": "path",
-            "required": true,
+            "name": "userId",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "itemName",
+            "in": "query",
             "type": "string"
           },
           {
@@ -248,7 +241,7 @@
               "type": "object",
               "properties": {
                 "amount": {
-                  "example": "any"
+                  "example": "1"
                 },
                 "color": {
                   "example": "any"
@@ -260,10 +253,10 @@
                   "example": "any"
                 },
                 "purchase_date": {
-                  "example": "any"
+                  "example": "2022-2-2"
                 },
                 "is_paid": {
-                  "example": "any"
+                  "example": "false"
                 }
               }
             }
@@ -282,14 +275,13 @@
         }
       }
     },
-    "/base/deleteUser/{userId}": {
+    "/base/deleteUser": {
       "delete": {
-        "description": "",
+        "description": "Delete an user",
         "parameters": [
           {
             "name": "userId",
-            "in": "path",
-            "required": true,
+            "in": "query",
             "type": "string"
           }
         ],
@@ -306,14 +298,18 @@
         }
       }
     },
-    "/base/deleteItem/{userId&itemName}": {
+    "/base/deleteItem": {
       "delete": {
-        "description": "",
+        "description": "Delete an item",
         "parameters": [
           {
-            "name": "userId&itemName",
-            "in": "path",
-            "required": true,
+            "name": "userId",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "itemName",
+            "in": "query",
             "type": "string"
           }
         ],
